--- a/backend/config.properties
+++ b/backend/config.properties
@@ -1,6 +1,10 @@
 # 进程输入管道文件路径，以及锁文件，由DM进程维护锁
-input_pip_path=D:/desktop/dm_in.pip
-input_pip_lock=D:/desktop/dm_in.lock
+input_pip_path=D:/Desktop/Note/Python/Python_Projects/continuous_acquire-main/temp/dm_in.pip
+input_pip_lock=D:/Desktop/Note/Python/Python_Projects/continuous_acquire-main/temp/dm_in.lock
 # 进程输出管道文件路径，以及所文件，由消息中间件维护锁
-output_pip_path=D:/desktop/dm_out.pip
-output_pip_lock=D:/desktop/dm_out.lock
+output_pip_path=D:/Desktop/Note/Python/Python_Projects/continuous_acquire-main/temp/dm_out.pip
+output_pip_lock=D:/Desktop/Note/Python/Python_Projects/continuous_acquire-main/temp/dm_out.lock
+# 输入管道读线程读取间隔，单位为秒
+input_pip_read_interval=0.1
+# 是否启用GUI，1表示启用，0表示停用
+enable_gui=1
