feat(): 完善通讯功能
前后端和中间件三者通讯联调完成，并且对其中可能引发错误的位置进行了修复，降低了程序运行出错的可能，进行了简单测试，中间件能够 适应简单的多客户端请求处理，未来需要进行业务逻辑编写以及GUI界面联调

--- a/frontend_py/config.yaml
+++ b/frontend_py/config.yaml
@@ -25,3 +25,9 @@ ui: # gui参数设定
     duration_value: 10  # 默认持续时间
     duration_unit: 1  # 持续连拍默认采用时间单位
     framerate: 10  # 默认帧率
+server:
+  # 连接目标端口号和地址
+  host: 127.0.0.1
+  port: 25565
+  # 超时时间，设置过长会导致程序难以退出
+  timeout: 3
