--- a/backend/config.properties
+++ b/backend/config.properties
@@ -8,3 +8,5 @@ output_pip_lock=D:/Desktop/Note/Python/Python_Projects/continuous_acquire-main/t
 input_pip_read_interval=0.1
 # 是否启用GUI，1表示启用，0表示停用
 enable_gui=1
+# 连拍启用的线程个数
+acquire_thread_num=1
